<resources>
    <string name="app_name">AntiFraude</string>
    <string name="db_name">BD_AntiFraude</string>
    <string name="keyexportbd_password">1234567890</string>
    <string name="text_iniciando_session_fuera_de_cobertura">Iniciando sesión off line</string>
    <string name="login_usuario">Usuario</string>
    <string name="login_hint_usuario">Ingresar usuario</string>
    <string name="login_clave">Clave</string>
    <string name="login_hint_clave">Ingresar clave</string>
    <string name="menu_hint_name">Luka Regina</string>
    <string name="menu_content_description">Perfil</string>
    <string name="login_description_btn_iniciar">Ingresar</string>
    <string name="menu_hint_lastname">Mandoka de los Kiddos</string>
    <string name="menu_hint_email">troyesivan@gmail.com</string>
    <string name="menu_titulo">Menú</string>
    <string name="alert_dialog_cerrar_sesion_title">¿Desea salir de la aplicación?</string>
    <string name="text_fuera_de_cobertura">Fuera de Cobertura</string>
    <string name="btn_description_registrar">Registrar</string>
    <string name="modelo_descripcion_cant_horas">La cantidad de preguntas en el cuestionario será de:</string>
    <string name="modelo_descripcion_bloqueo">Bloqueo de Personas</string>
    <string name="modelo_descripcion_limite_desaprobaciones">Límite de preguntas desaprobadas:</string>
    <string name="modelo_descripcion_limite_sin_respuestas">Límite de preguntas sin respuestas:</string>
    <string name="modelo_descripcion_habilitacion_persona">Habilitar persona pasada la cantidad de horas:</string>
    <string name="modelo_hint">1</string>
    <string name="modelo_descripcion_titulo">Cuestionario</string>
    <string name="modelo_number">number</string>
    <string name="modelo_title">Administración de Modelo</string>
    <string name="adm_pregunta_title">Administración de Preguntas</string>
    <string name="pregunta_descripcion_titulo">Preguntas para modelo:</string>
    <string name="pregunta_sin_resultados">No se encontraron resultados</string>
    <string name="modelo_cant_horas">Ingrese un valor de 1 a 24</string>
    <string name="modelo_sin_respuestas">Ingrese un valo de 1 a 8</string>
    <string name="modelo_limite_desaprobaciones">Ingrese un valor de 1 a 8</string>
    <string name="modelo_cant_preguntas">Ingrese un valor de 1 a 8</string>
    <string name="text_validando_usuario">Validando Usuario...</string>
    <string name="text_obteniendo_adm_modelo">Obteniendo configuración de Modelo</string>
    <string name="modelo_info_cant_preguntas">Seleccione una cantidad igual o mayor a lo configurado.</string>
    <string name="text_obteniendo_adm_pregunta">Obteniendo configuración de preguntas.</string>
    <string name="text_guardando_adm_modelo">Guardando configuración de Modelo</string>
    <string name="text_guardando_adm_pregunta">Guardando configuración de Preguntas</string>
    <string name="validacion_descripcion_titulo">Registro de datos</string>
    <string name="validacion_descripcion_nro_documento">Número de documento:</string>
    <string name="validacion_descripcion_tipo_documento">Tipo de documento:</string>
    <string name="btn_description_continuar">Continuar</string>
    <string name="validacion_descripcion_documento_consultado">"Documento consultado: "</string>
    <string name="validacion_descripcion_nombre_completo">"Nombre completo de la Persona: "</string>
    <string name="validacion_descripcion_estado">"Estado: "</string>
    <string name="validacion_descripcion_operacion">"Operación: "</string>
    <string name="text_validando_identidad">Validando identidad</string>
    <string name="btn_description_nuevo_consulta">Nueva Consulta</string>
    <array name="tipoDocumento">
        <item>seleccione</item>
        <item>DNI</item>
        <item>CE</item>
    </array>

</resources>
