<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/navigation_drawer_header_margin"
    android:orientation="vertical"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pregunta_descripcion_titulo"
            android:textSize="@dimen/lv_row_text_size_detail" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rc_pregunta"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btn_registrar_modelo"
            android:layout_below="@+id/tv_titulo"
            android:layout_marginTop="@dimen/txt_big"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:listSelector="@android:color/transparent"
            android:stretchMode="columnWidth"
            tools:listitem="@layout/adm_pregunta_item" />

        <Button
            android:id="@+id/btn_registrar_modelo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_margin="@dimen/txt_big"
            android:background="@drawable/button_ripple"
            android:paddingStart="@dimen/txt_big"
            android:paddingEnd="@dimen/txt_big"
            android:text="@string/btn_description_registrar"
            android:textColor="@color/color_white"
            android:textSize="@dimen/txt_large" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_noresultados"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/pregunta_sin_resultados" />
    </LinearLayout>
</LinearLayout>