<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="192dp"
    android:gravity="bottom"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:layout_gravity="start|bottom"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:gravity="center"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:background="@drawable/circle_bg_white"
                android:padding="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_default_top">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@mipmap/logo_sin_fondo"
                    android:contentDescription="@string/menu_content_description" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginEnd="@dimen/margin_default_top">
                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/txt_big"
                    android:textStyle="bold"
                    android:fontFamily="@string/font_family_medium"
                    android:textColor="@android:color/white"
                    android:hint="@string/menu_hint_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <TextView
                    android:id="@+id/lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@android:color/white"
                    android:gravity="center_vertical"
                    android:fontFamily="@string/font_family_medium"
                    android:textSize="@dimen/txt_medium"
                    android:hint="@string/menu_hint_lastname"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:visibility="gone"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="@dimen/txt_medium"
                android:hint="@string/menu_hint_email"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>