<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lv_row_text_size_detail_small"
            android:text="@string/validacion_descripcion_documento_consultado"
            android:textColor="@color/color_grey"
            android:textSize="@dimen/lv_row_text_size_detail_xmedium" />

        <TextView
            android:id="@+id/tv_documento_consultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lv_row_text_size_detail_small"
            android:textColor="@color/color_grey"
            android:textSize="@dimen/lv_row_text_size_detail_medium"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_nombre_completo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lv_row_text_size_detail_small"
            android:text="@string/validacion_descripcion_nombre_completo"
            android:textColor="@color/color_grey"
            android:textSize="@dimen/lv_row_text_size_detail_xmedium" />

        <TextView
            android:id="@+id/tv_nombre_completo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lv_row_text_size_detail_small"
            android:textColor="@color/color_grey"
            android:textSize="@dimen/lv_row_text_size_detail_medium"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/lv_row_text_size_detail_small"
                android:text="@string/validacion_descripcion_estado"
                android:textColor="@color/color_grey"
                android:textSize="@dimen/lv_row_text_size_detail_xmedium" />

            <TextView
                android:id="@+id/tv_estado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/lv_row_text_size_detail_small"
                android:textColor="@color/color_grey"
                android:textSize="@dimen/lv_row_text_size_detail_medium"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/lv_row_text_size_detail_small"
                android:text="@string/validacion_descripcion_operacion"
                android:textColor="@color/color_grey"
                android:textSize="@dimen/lv_row_text_size_detail_medium" />

            <TextView
                android:id="@+id/tv_operacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/lv_row_text_size_detail_small"
                android:textColor="@color/color_grey"
                android:textSize="@dimen/lv_row_text_size_detail_medium"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/txt_big" />
</LinearLayout>