<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fondo_splash"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:padding="10dp"
    tools:context=".view.activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_default_top"
                android:layout_marginBottom="35dp"
                android:src="@mipmap/logo_sin_fondo" />

            <androidx.cardview.widget.CardView
                android:layout_margin="15dp"
                android:background="@android:color/white"
                app:cardCornerRadius="17dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/crd_login"
                android:layout_below="@+id/login_imvLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:padding="15dp"
                    android:id="@+id/login_llControlesLogin"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="4dp"
                        android:text="Bienvenido"
                        android:fontFamily="@string/font_family_regular"
                        android:textStyle="bold"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/txt_big" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:src = "@mipmap/icon_login_user"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="2dp"
                            android:layout_width="35dp"
                            android:layout_height="35dp" />
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="4dp"
                                android:text="@string/login_usuario"
                                android:textColor="@color/colorAccent"
                                android:textSize="14sp" />
                            <EditText
                                android:id="@+id/login_usuario"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/login_hint_usuario"
                                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789 "
                                android:textColor="@color/primary_text"
                                android:inputType="textMultiLine" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:src = "@mipmap/icon_login_password"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="2dp"
                            android:layout_width="35dp"
                            android:layout_height="35dp" />
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/login_clave"
                                android:layout_marginLeft="4dp"
                                android:textColor="@color/colorAccent"
                                android:textSize="14dp" />

                            <EditText
                                android:id="@+id/login_clave"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:maxLength="8"
                                android:hint="@string/login_hint_clave"
                                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789 "
                                android:textColor="@color/primary_text"
                                android:inputType="textPassword" />
                        </LinearLayout>
                    </LinearLayout>

                    <Button
                        android:id="@+id/login_btn_ingresar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_ripple"
                        android:layout_marginTop="25dp"
                        android:text="@string/login_description_btn_iniciar"
                        android:textColor="@color/color_white"
                        android:textSize="@dimen/txt_large" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>